--- a/Arduino_Website/Home.html
+++ b/Arduino_Website/Home.html
@@ -42,7 +42,7 @@
             <div class="slideshow-container">
 
                 <div class="mySlides fade">
-                  <img src="img\logo.png" style="width:25%">
+                  <img src="img\Logo.png" style="width:25%">
                 </div>
                 
                 <div class="mySlides fade">
