--- a/Arduino_Website/Arduino.html
+++ b/Arduino_Website/Arduino.html
@@ -102,7 +102,7 @@
 
         <article class="section">
           <div class="imagesec4">
-            <img src="img/benodigdheden.png" width="60%">
+            <img src="img/Benodigdheden.png" width="60%">
          </div>
         </article>
 
